# cot-loop

./: .gitignore  AGENTS.md  CLAUDE.md  FIG1_REPRO.md  README.md  backlog.md  pyproject.toml  roadmap.md  understand-where-loop-and-max-length-come-from.md
data/: README.md  aime_2024_2025.jsonl  aime_2024_2025_template.jsonl  omni_math_ge7_screen_300.jsonl
docs/: README.md  artifacts-by-week.md  livecodebench-repaired-stage-report-2026-04-21.md  main-four-dataset-rollout-rebuild-2026-04-23.md  olmo-degeneration-origin-audit-2026-04-04.md  olmo-qwen-degeneration-origin-combined-2026-04-09.md  olmo2-1b-fifty-prompt-rerun-2026-04-05.md  prefill-activation-visualization.md  prompt-profile-balanced-regression-2026-04-04.md  prompt-profile-balanced-regression-corrected-2026-04-04.md  prompt-profile-binary-capacity-controls-2026-04-04.md  prompt-profile-binary-retrain-h256d2-2026-04-04.md  prompt-profile-combined-audit-2026-04-05.md  prompt-profile-eval-contract.md  prompt-profile-full-surface-update-2026-04-04.md  prompt-profile-full-train-plan-2026-04-02.md  prompt-profile-full-train-results-2026-04-04.md  prompt-profile-length-mechanism-2026-04-09.md  prompt-profile-metadata-mechanism-2026-04-06.md  prompt-profile-natural-regression-rerun-2026-04-05.md  prompt-profile-plain-language-2026-03-30.md  prompt-profile-probe.md  prompt-profile-projection.md  prompt-profile-rfm-artifact-schema-2026-04-21.md  prompt-profile-rfm-mode-consistent-stage-2026-04-23.md  prompt-profile-rfm-steering-grounded-stage-2026-04-23.md  prompt-profile-rfm-steering-plan-2026-04-21.md  (+6 more)
(+529 files in other folders)
